--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import datetime\n",
     "from mingpt.md import MemData\n",
     "from mingpt.math_dataset import MathDataset\n",
+    "from mingpt.ac_schedule import AcSchedule\n",
     "from mingpt.model import GPT, GPTConfig, GPT1Config\n",
     "from torch.utils.data.dataloader import DataLoader\n",
     "from mingpt.trainer import Trainer, TrainerConfig\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,19 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add memory data structure to training data\n",
     "memory_slots = 7\n",
     "MD = MemData(memory_slots, debug=0)\n",
-    "MD.initiate_mem_slot_data(fn_data)"
+    "MD.initiate_mem_slot_data(fn_data, warmup_sz=50000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49999"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "257\n",
+      "102\n",
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "print(MD.block_size)\n",
     "print(MD.vocab_size)\n",
@@ -108,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12/21/2020 07:00:36 - INFO - mingpt.model -   number of parameters: 3.277568e+06\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize a baby GPT model\n",
     "mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
@@ -123,7 +162,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Iteration: 0\n",
+      "Epochs: 1\n",
+      "Size: 50000\n",
+      "Marker: 0.0\n",
+      "Warm: True\n",
+      "\n",
+      "Training:  0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "epoch 1 iter 130: train loss 1.39272. lr 5.616464e-04: 100%|██████████| 131/131 [01:01<00:00,  2.13it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "max_it = 100\n",
     "current_it = 0\n",
@@ -131,25 +191,23 @@
     "marker_data = 0.2\n",
     "\n",
     "exp_folder = 'models/' + datetime.datetime.now().strftime('%Y-%m-%d~%H:%M:%S')\n",
+    "schedule = AcSchedule(MD)\n",
     "\n",
     "while(current_it < max_it):\n",
     "    \n",
-    "    # Wait until the working memory is filled, then use 5 epochs\n",
-    "    epoch = 1 if current_it < 7 else 10\n",
-    "    # Use marker data once the working memory is full\n",
-    "    #marker_data = 0.0 if current_it < 7 else 0.2\n",
-    "    ac = 1 if current_it < 7 else 10\n",
+    "    epoch, size, ac, marker_data, warmup = schedule.create(current_it)\n",
     "    \n",
-    "    examiner = AdaptiveExaminer(MD, ac=ac, max_batch=batch_size)\n",
+    "    examiner = AdaptiveExaminer(MD, ac=ac, max_batch=batch_size, warmup=warmup)\n",
     "    \n",
     "    # Switch between main training and marker training\n",
-    "    print(\"Marker Data: \", str(marker_data))\n",
+    "    print(f\"Current Iteration: {current_it}\\nEpochs: {epoch}\\nSize: {size}\\nMarker: {marker_data}\\nWarm: {warmup}\\n\")\n",
+    "    \n",
     "    train_dataset = MathDataset(fname=fn_train, MD=MD, marker_data=marker_data)\n",
-    "    test_dataset = MathDataset(fname=fn_test, MD=MD, marker_data=0.0)\n",
+    "    test_dataset = MathDataset(fname=fn_test, MD=MD, marker_data=0.0) if not warmup else None\n",
     "    \n",
     "    # Trainer Config\n",
     "    tconf = TrainerConfig(max_epochs=epoch, batch_size=batch_size, learning_rate=6e-4,\n",
-    "                      lr_decay=True, warmup_tokens=1024, final_tokens=epoch*len(train_dataset)*(MD.vocab_size+1),\n",
+    "                      lr_decay=True, warmup_tokens=1024, final_tokens=epoch*len(train_dataset)*(MD.block_size/3),\n",
     "                      num_workers=6)\n",
     "    \n",
     "    # Create the first training round\n",
@@ -162,9 +220,9 @@
     "    \n",
     "    print(\"Exam and new dataset-------------\\n\")\n",
     "    print(\"Training exam \\n\")\n",
-    "    examiner.exam(fn_train, trainer)\n",
+    "    examiner.exam(fn_train, trainer, size, test=False)\n",
     "    print(\"Test exam \\n\")\n",
-    "    examiner.exam(fn_test, trainer, test=True)\n",
+    "    if not warmup: examiner.exam(fn_test, trainer, size, test=True)\n",
     "    \n",
     "    current_it += 1"
    ]
